force-app/main/default/objects/Current_Ending_Balance__c/Current_Ending_Balance__c.object-meta.xml
<CustomObject>
    <label>Current Ending Balance_Delete</label>
    <nameField>
        <displayFormat>CEB-{0000000000}</displayFormat>
        <label>Current Ending Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Ending Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>