force-app/main/default/objects/Current_Ending_Balance__c/fields/Billing_Market__c.field-meta.xml
<CustomField>
    <fullName>Billing_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Market_Delete</label>
    <referenceTo>Billing_Market__c</referenceTo>
    <relationshipLabel>Current Ending Balances</relationshipLabel>
    <relationshipName>Current_Ending_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>