force-app/main/default/objects/Current_Ending_Balance__c/fields/Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Region__c</fullName>
    <formula>Billing_Market__r.Parent_Billing_Market__r.Territory__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Region_Delete</label>
    <type>Text</type>
</CustomField>