force-app/main/default/objects/Current_Ending_Balance__c/fields/Billing_Territory__c.field-meta.xml
<CustomField>
    <fullName>Billing_Territory__c</fullName>
    <formula>Billing_Market__r.Parent_Billing_Market__r.Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Territory_Delete</label>
    <type>Text</type>
</CustomField>