force-app/main/default/objects/Current_Ending_Balance__c/fields/Current_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Ending_Balance__c</fullName>
    <label>Current Ending Balance_Delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>