force-app/main/default/objects/Current_Ending_Balance__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account_Delete</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>Current Ending Balances</relationshipLabel>
    <relationshipName>Current_Ending_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>