force-app/main/default/objects/Current_Ending_Balance__c/fields/Customer_Account_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Risk_Category__c</fullName>
    <formula>TEXT(Customer_Account__r.At_Risk_Category_Grouping__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account: Risk Category_Delete</label>
    <type>Text</type>
</CustomField>