force-app/main/default/objects/Current_Ending_Balance__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division_Delete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>