force-app/main/default/objects/Current_Ending_Balance__c/fields/IMGA__c.field-meta.xml
<CustomField>
    <fullName>IMGA__c</fullName>
    <formula>Customer_Account__r.IM_Account__r.IMGA_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGA_Delete</label>
    <type>Text</type>
</CustomField>