force-app/main/default/objects/Current_Ending_Balance__c/fields/IMGA_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>IMGA_At_Risk_Score__c</fullName>
    <formula>Customer_Account__r.IM_Account__r.IMGA_Lookup__r.At_Risk_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGA At Risk Score_Delete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>