force-app/main/default/objects/Current_Ending_Balance__c/fields/Last_Month_with_Cube__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_with_Cube__c</fullName>
    <label>Last Month with Cube_Delete</label>
    <type>Date</type>
</CustomField>