force-app/main/default/objects/Current_Ending_Balance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Account__c</columns>
    <columns>Billing_Market__c</columns>
    <columns>Department__c</columns>
    <columns>Division__c</columns>
    <columns>Storage_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>